[gd_scene load_steps=3 format=3 uid="uid://bkd7662if0eie"]

[ext_resource type="PackedScene" uid="uid://fm0aaaa6sv8p" path="res://Tile.tscn" id="1_oxxoi"]
[ext_resource type="Script" path="res://Piece.gd" id="2"]

[node name="Piece" type="Node2D"]
script = ExtResource("2")

[node name="Tile1" parent="." instance=ExtResource("1_oxxoi")]
position = Vector2(0, 48)
num = 1

[node name="Tile2" parent="." instance=ExtResource("1_oxxoi")]
num = 2

[node name="Tile3" parent="." instance=ExtResource("1_oxxoi")]
position = Vector2(48, 48)
num = 3

[node name="Tile4" parent="." instance=ExtResource("1_oxxoi")]
position = Vector2(96, 48)
num = 4

[node name="Tile5" parent="." instance=ExtResource("1_oxxoi")]
position = Vector2(144, 48)
num = 5
